# matchmaking_proxy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  ProjectOptions.cmake  README.md  compile_commands.json  conanfile.py  conanfile.txt  main.cxx  userDefinedGameOption.hxx
.github/workflows/: docker-image.yml
cmake/: CompilerWarnings.cmake  Linker.cmake  StaticAnalyzers.cmake
matchmaking_proxy/: CMakeLists.txt  matchmakingGameSerialization.hxx  serialization.hxx  userMatchmakingSerialization.hxx  util.cxx  util.hxx
matchmaking_proxy/database/: CMakeLists.txt  constant.hxx  database.cxx  database.hxx
matchmaking_proxy/logic/: CMakeLists.txt  client.hxx  matchmaking.cxx  matchmaking.hxx  matchmakingAllowedTypes.hxx  matchmakingCallbacks.hxx  matchmakingData.cxx  matchmakingData.hxx  matchmakingGame.cxx  matchmakingGame.hxx  matchmakingGameAllowedTypes.hxx  matchmakingGameData.hxx  matchmakingStateMachine.cxx  matchmakingStateMachine.hxx  myWebsocket.cxx  myWebsocket.hxx  rating.cxx  rating.hxx
matchmaking_proxy/pw_hash/: CMakeLists.txt  constant.hxx  passwordHash.hxx
matchmaking_proxy/server/: CMakeLists.txt  gameLobby.cxx  gameLobby.hxx  matchmakingOption.hxx  myWebsocket.cxx  myWebsocket.hxx  server.cxx  server.hxx  user.hxx
src/: CMakeLists.txt  serialization.hxx  util.hxx
src/database/: CMakeLists.txt  database.cxx  database.hxx
src/logic/: CMakeLists.txt  client.cxx  client.hxx  game.cxx  game.hxx  rating.cxx  rating.hxx
src/pw_hash/: CMakeLists.txt
src/server/: gameLobby.hxx  server.cxx  server.hxx  user.cxx  user.hxx
test/: CMakeLists.txt  database.cxx  integration.cxx  main.cxx  matchmaking.cxx  matchmakingGame.cpp  mockserver.hxx  networkingUtil.cxx  networkingUtil.hxx  rating.cxx  server.cxx  startGame.cxx  testCertServer.cxx  testCertServer.hxx  useAsLib.cxx  userDefinedGameOption.hxx  util.cxx  util.hxx
test/benchmark/: CMakeLists.txt  networking.cxx
test/logic/: logic.cxx  useCase.cxx
